# GitHubTraining

./: .gitignore  README.md
GitHubTraining/: NowyPliczekTekstowy.txt  NowyPliczekTekstowy.txt.orig  README.md
NewCTesting/: NewCTesting.sln
NewCTesting/Debug/: NewCTesting.ilk
NewCTesting/NewCTesting/: GenericContainer.cpp  GenericContainer.h  NewCTesting.cpp  NewCTesting.vcxproj  NewCTesting.vcxproj.filters  ReadMe.txt  stdafx.cpp
NewCTesting/NewCTesting/Debug/: vc140.idb
NewCTesting/NewCTesting/Debug/NewCTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewCTesting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NewCTesting/NewCTesting/x64/Debug/: vc140.idb
NewCTesting/x64/Debug/: NewCTesting.ilk
ST_Converter/InftoRegConverter/: InftoRegConverter.sln
ST_Converter/InftoRegConverter/Debug/: CFD_ReferenceInject.reg  InftoRegConverter.ilk  {4d36e96c-e325-11ce-bfc1-08002be10318}0008.txt
ST_Converter/InftoRegConverter/InftoRegConverter/: Converter.cpp  Converter.h  InftoRegConverter.cpp  InftoRegConverter.vcxproj  InftoRegConverter.vcxproj.filters  ReadMe.txt  stdafx.cpp
ST_Converter/InftoRegConverter/Release/: InftoRegConverter.iobj  InftoRegConverter.ipdb  {4d36e96c-e325-11ce-bfc1-08002be10318}0007.txt
TylkoNaMaster/: MasterBranch.txt
TylkoNaTestBranch/: TestowyPlik.txt
testJava/.metadata/: version.ini
testJava/.recommenders/caches/: identified-project-coordinates.json
testJava/JavaTraining/src/: Person.java  Start.java
testSimejk/: CMakeLists.txt  Main.cpp
testSimejk/Source/: Main.cpp
(+63 files in other folders)
